fix: spacing

--- a/src/assets/styles/pages/books.css
+++ b/src/assets/styles/pages/books.css
@@ -69,6 +69,7 @@
     align-items: start;
 
     & picture {
+      display: block;
       margin-bottom: var(--sizing-md);
     }
 
